fix: wrong padding

--- a/assets/wizards/handoff-banner/style.scss
+++ b/assets/wizards/handoff-banner/style.scss
@@ -9,7 +9,7 @@
 	background: $primary-500;
 	display: block;
 	margin: 0 0 0 -10px;
-	padding: 12px;
+	padding: 4px;
 	position: relative;
 
 	@media screen and ( min-width: 783px ) {
